# ai-agent-mcp-servers

./: .env  .gitignore  DaykLine.py  README.md  pyproject.toml
data/: hk_stocks_20250529_140224.csv  hk_stocks_20250529_142627.csv
data/cache/: stock_data.csv  timestamp.json
src/data/cache/: timestamp.json
src/financial_mcp_server/: register.py  server.py
src/financial_mcp_server/3rd/akshare/: DaykLine.py
src/financial_mcp_server/agents/: agent_call_tools.py  agent_mcp_client.py  agent_planning.py  agent_react.py  agent_volume_strategy.py
src/financial_mcp_server/akshare/: concat.py  daily_k_all.py  daily_k_by_code.py  financial_report_by_code.py
src/financial_mcp_server/llms/: DashScope.py  DeepSeek.py  llm.py
src/financial_mcp_server/prompts/: prompt.py
src/financial_mcp_server/registers/: stock_news.py
src/financial_mcp_server/tools/: financial_report.py  load.py  save_hk_stocks.py  stock_analysis.py  stock_price.py  stock_price_volume.py  strategies.py
