[project]
name = "ai-agent-mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.license]
file = "LICENSE"

[project.scripts]
ai-agent-mcp-servers = "financial_mcp_server:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_mcp_server"]